	    * -wordwrap: wrap at spaces to avoid breaking words
	- document default interval of 2.4 seconds.
	- set default 'reload' value to 0 to prevent reloads.
	- updated man page.
	- strict-aliasing fix suggested by mmj.
	- --fork option really does report the PID now, as the man page claims
	- improved regexp transform code, but not enough...

0.9  Wed Feb 25 15:25:49 CET 2004
	- unsigned/fseek bug fix by (mmj@panther.mmj.dk).
        - patch by Didier Verna <didier@lrde.epita.fr> (2004-01-07)
            * root-tail.c (root_window): New function. Return the real
            root window, or the virtual one if any.
            (InitWindow): Use it.
            (force_refresh): Clear the root-tail area, not the whole window.
            (blank_window): Ditto.
            (main_loop): Don't forget to redraw () the initial contents.

0.2  Wed Sep  4 17:20:57 CEST 2002
	- applied patch by ami@fischman.org (tac).
        - applied patch by raldi@verisignlabs.com (-noinitial fix).

0.1.1
	- backported fixes from Marco d'Itri, who did most of the maintaining
          work over the last year(s). Unfortunately, he doesn't answer my mails
          (just as I did to most of root-tails users ;), so this is also the first
          sourceforge release.
        - convert tab characters to spaces
        - fix -noinital bug

0.0.10
	- initial lines are now displayed in the correct colour
	- documentation fixes

0.0.9 Mon Nov 13 13:53:05 CET 2000
	- fix descent redraw problem
        - fix window offset miscalculation
        - new option -interval
        - new option -V
        - more options shortcut
        - ported to linux 2.4.0, thanks to stefan@weihnachtsmann.at

0.0.8 Sun Nov 12 14:16:04 CET 2000
	- small bugfixes.
	- memory corruption fix.
	- added fixes by Olexij Tkatchenko.
        - fixed garbage on top of screen (ashe@sanctuary.org)
        - added -noinitial option to keep from drawing to
          screen until new data has arrived (ashe@sanctuary.org)